# its-wasmtime

./: Cargo.toml  README.md
src/: lib.rs
tests/simple_component/: Cargo.toml
tests/simple_component/src/: bindings.rs  lib.rs
tests/simple_resource/: Cargo.toml
tests/simple_resource/src/: bindings.rs  lib.rs
tests/simple_resource/wit/: world.wit
wasm_test_components/simple_component/wit/: world.wit
