[package]
name = "its-wasmtime"
version = "0.1.1"
edition = "2021"
license = "MIT OR Apache-2.0"
keywords = ["wasm", "wasmtime", "plugin"]
description = "A simple Wasmtime component model runtime"
readme = "README.md"
repository = "https://github.com/SuddenlyHazel/its-wasmtime"

[dependencies]
wasmtime = { version = "20.0.2", features = ["runtime", "component-model"]}
wasmtime-wasi = {version = "20.0.2", features = []}
wit-component = { version = "0.207.0" }
anyhow = "1.0.83"
tokio = { version = "1.37.0", features = ["full"] }
